# Biome

./: CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  build.sh  conanfile.py
api/: openapi.yaml
client/: CMakeLists.txt  conanfile.py
cmake/: GenerateDTO.cmake
common/dto/: dto_print_helpers.h
common/helpers/: json_helper.hpp  time_helpers.h
tests/: CMakeLists.txt
tests/dto/: CMakeLists.txt  test_main.cpp
tests/repo/: CMakeLists.txt  test_main.cpp  test_sqlite_user_repository.cpp
tests/rest_server/: CMakeLists.txt  test_rest_server.cpp
tests/server_mocks/: mock_user_service.h
tests/storage/: CMakeLists.txt  test_fixture.h  test_integration.cpp  test_main.cpp  test_sqlite_connection.cpp  test_sqlite_database.cpp  test_sqlite_result_set.cpp  test_sqlite_statement.cpp  test_sqlite_transaction.cpp
tools/code_generators/: common_dto_generator.py  test_dto_generator.py
tools/code_generators/templates/: dto.cpp.j2  dto.h.j2  dto_common.h.j2  dto_test.cpp.j2
tools/migrator/: CMakeLists.txt
tools/migrator/src/: main.cpp
tools/migrator/src/migrations_sqlite/: v2_default_data.h
vault-server/: CMakeLists.txt
vault-server/config/: vault-server.ini
vault-server/src/: application.cpp  application.h  config.cpp  config.h  main.cpp
vault-server/src/api/: rest_server.cpp  rest_server.h
vault-server/src/api/handlers/: auth_handler.cpp  auth_handler.h  (+4 more)
vault-server/src/logic/: auth_service.cpp  auth_service.h  iauth_service.h  iuser_service.h
vault-server/src/storage/: database_factory.cpp  database_factory.h  idatabase.h  types.h
(+17 files in other folders)
